--- a/_includes/extra/head.html
+++ b/_includes/extra/head.html
@@ -8,6 +8,11 @@
   gtag('config', 'G-9C8Q53BWWX');
 </script>
 <style>
-
-  
+.copyright > a, .copyright > span, .addons > dl {
+    display: none;
+}
+.branch > span {
+    display: none;
+}
+ 
 </style>
