js_tasks un img stili

--- a/_includes/extra/head.html
+++ b/_includes/extra/head.html
@@ -2,17 +2,23 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9C8Q53BWWX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'G-9C8Q53BWWX');
 </script>
 <style>
-.copyright > a, .copyright > span, .addons > dl {
+  .copyright>a,
+  .copyright>span,
+  .addons>dl {
     display: none;
-}
-.branch > span {
+  }
+
+  .branch>span {
     display: none;
-}
- 
+  }
+
+  img {
+    border: 1px solid #8080803d;
+  }
 </style>
