--- a/_includes/extra/head.html
+++ b/_includes/extra/head.html
@@ -23,4 +23,11 @@
   .nerami {
     border: none;
   }
+img.logoval {
+    width: 226px;
+    display: block;
+    margin: auto;
+    border: 0;
+}
+
 </style>
