--- a/_includes/templates/footer.liquid
+++ b/_includes/templates/footer.liquid
@@ -28,5 +28,7 @@
        
         {%- assign updated_time = rest_updated_at | date: "%d.%m.%Y." -%}
         Atjaunināts: {{ updated_time -}}
+		<br>
+		Darbojas ar <a href="https://rundocs.io" target="_blank">RunDocs</a> tēmu un bāzēts uz Github Pages
     </span>
 </div>
