--- a/_includes/templates/sidebar.liquid
+++ b/_includes/templates/sidebar.liquid
@@ -5,6 +5,8 @@
                 <a class="h4 no-underline py-1 px-2 rounded-1" href="{{ site.baseurl }}/" title="{{ site.description }}">
                     <i class="fa fa-home"></i> {{ site.title }}
                 </a>
+				<br>
+				Vietne palīdzībai programmēšanā
             </div>
             <span class="version">{{ docs.latest_release.name }}</span>
             <form class="search pt-2" action="{{ site.baseurl }}/search.html" method="get" autocomplete="off">
