--- a/_includes/css/custom.scss.liquid
+++ b/_includes/css/custom.scss.liquid
@@ -32,3 +32,8 @@ h3{
 @include alert(alert-success,#a8f0c6);
 @include alert(alert-danger,#f7a7a3);
 @include alert(alert-warning,#fbe9d9);
+img.navikon {
+    border: 0px;
+    width: 16px;
+    vertical-align: middle;
+}
