--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -109,7 +109,17 @@ hr {
 
 // Video fix for small screens
 
-iframe{
-  width: 100vw;
-  height: calc(100vw/1.77777778);
- }
+.video {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
